--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <link href="https://fonts.cdnfonts.com/css/trajia" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/challans" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/alien-invader" rel="stylesheet">
-                                     
+    <link href="https://fonts.cdnfonts.com/css/grytha-angel" rel="stylesheet">
+                                                
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
