--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <link href="https://fonts.cdnfonts.com/css/challans" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/alien-invader" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/grytha-angel" rel="stylesheet">
-                                                
+    <link href="https://fonts.cdnfonts.com/css/pt-mono" rel="stylesheet">
+                
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
